integrate API on client and fix bug

--- a/client/src/components/Layout/Header/styles.scss
+++ b/client/src/components/Layout/Header/styles.scss
@@ -35,7 +35,7 @@
         }
         &:not([type='submit']):not([type='button']):focus {
           outline: none;
-          border-color: #9ecaed;
+          border-color: #3498db;
         }
       }
     }
