--- a/client/src/pages/Home/styles.scss
+++ b/client/src/pages/Home/styles.scss
@@ -19,8 +19,15 @@
       .video-info {
         padding: 0 16px;
         line-height: 18px;
+        width: 100%;
+        overflow: hidden;
         .title {
           color: #ff0000;
+          display: -webkit-box;
+          -webkit-line-clamp: 1;
+          -webkit-box-orient: vertical;
+          white-space: pre-wrap;
+          overflow: hidden;
         }
         .statistics {
           display: flex;
@@ -40,8 +47,18 @@
           margin-top: 6px;
           font-weight: 600;
           font-style: italic;
+          display: -webkit-box;
+          -webkit-line-clamp: 7;
+          -webkit-box-orient: vertical;
+          white-space: pre-wrap;
+          overflow: hidden;
         }
       }
+    }
+    .no-video {
+      text-align: center;
+      font-weight: 500;
+      font-style: italic;
     }
   }
   .pagination {
@@ -59,7 +76,7 @@
         margin-left: 8px;
       }
       &:hover,
-      .current {
+      &.current {
         background-color: #d4d4d4;
         color: #ff0000;
         font-weight: 600;
@@ -68,7 +85,7 @@
       &:active {
         transform: scale(0.95);
       }
-      .current {
+      &.current {
         pointer-events: none;
       }
     }
